[project]
name = "mechanical-design-manual-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
